...
                horizontalArrangement = Arrangement.spacedBy(16.dp, Alignment.CenterHorizontally),
                verticalAlignment = Alignment.CenterVertically
            ) {
                FilledTonalButton(
                    modifier = Modifier
                        .weight(1f)
                        .testTag("data_view_discard_button"),
                    onClick = {
                        resetEditStateToSaved()
                        isEditing.value = false
                    }
                ) {
                    Text(stringResource(R.string.data_view_discard))
                }
                Button(
                    modifier = Modifier
                        .weight(1f)
                        .testTag("data_view_save_button"),
                    onClick = { saveChanges() }
                ) {
                    Text(stringResource(R.string.data_view_save))
                }
            }
        }
...
